# ICS0019

Homework1/: installModule.txt
Homework1/GUI/: GUI.py
Homework1/Quadratic_solver/: README.md  pyproject.toml  requirements.txt
Homework1/Quadratic_solver/src/quadratic_solver_tanpaa/: quadratic_solver.py
Homework1/Quadratic_solver/tests/: quadratic_test.py  solve_quadratic.py
Homework2/: README.txt
Homework2/CanteensApp/: GUI.py  api.py  app.py  db_setup.py  requirements.txt
Homework2/CanteensApp/database/: Canteens.csv  DINERS.db
Homework2/CanteensApp/templates/: index.html
Week 1/Class Work/: ClassWork1.py
Week 1/scope/: decor0.py  decor1.py  inner_fn00.py  scope1.py  scope2.py  scope3.py  scope4.py  scope5.py  scope6.py  scope7.py  task1.py  task2.py
Week 1/testing/: calculator.py  test_func.py  test_sum.py  test_sum2.py  test_sum3.py  using_func.py
