[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quadratic_solver"
version = "0.0.1"
authors = [
  { name="Tanel Paal", email="author@example.com" },
]
description = "This package calculates the quadratic equation."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"